# github-access-using-githubapp

./: .dockerignore  .gitignore  Dockerfile  LICENSE  Makefile  Pipfile  README.md  action.yml  entrypoint.sh  generate_jwt.py  github-authentication.py  label.py  pyproject.toml  use_jwt.py
.github/: dependabot.yml
